2007-09-27 Samuel Abels <http://debain.org>

	* lib/Exscript/Code.py, lib/Exscript/Exscript.py: Support windows newlines.

2007-09-26 Samuel Abels <http://debain.org>

	* lib/Exscript/ExpressionNode.py: Fix: Arithmetic operations with 0 no
	longer fail.
	* lib/Exscript/Loop.py: Fix: "while" and "until" loops would not always
	work.
	* lib/Exscript/Extract.py: Added support for the "from" keyword.
	* lib/Exscript/Regex.py: Fix: Escaping '/' would not work.
	* lib/Exscript/Code.py: Fix the "is not" operator.
	* Release 0.9.10

2007-09-25 Samuel Abels <http://debain.org>

	* Release 0.9.9

2007-09-24 Samuel Abels <http://debain.org>

	* lib/TerminalConnection/SSH.py: The SSH adapter now automatically removes
	control characters from the data stream.

2007-09-23 Samuel Abels <http://debain.org>

	* lib/Exscript/*.py: Greatly improved the error handling of the parser.
	* lib/Exscript/Extract.py, lib/Exscript/Regex.py: Detect whether the correct
	number of match groups is used in a regular expression.
	* lib/Exscript/Execute.py, lib/Exscript/TerminalConnection/*.py: Moved the
	response error handling out of the Exscript interpreter into the connection
	code. This will let us improve error handling in the future.

2007-09-22 Samuel Abels <http://debain.org>

	* lib/Exscript/String.py: It is now possible to use \r and \n in strings.
	* lib/Exscript/ExpressionNode.py: Strings may now be concatenated using the
	"." operator.
	* lib/Exscript/Code.py, lib/Exscript/ExpressionNode.py: Added "in" and "not
	in" operators for searching through a list.

2007-09-21 Samuel Abels <http://debain.org>

	* lib/Exscript/Execute.py, lib/Exscript/Token.py, lib/Exscript/String.py:
	Fixed a bug that escaping of some characters outside of code context did not
	work.
	Fixed another bug that escaping quotes in a string would not work. Added 
	support for using $-prefixed variable names in strings.
	* lib/Exscript/Execute.py: Added the builtin variable "response", that now